Fixed styling and readability.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,13 +1,19 @@
 main {
+  width: 100%;
   display: grid;
-  grid-template-areas: "section1 section1"
-                        "section2 section3";
+  grid-template-areas:
+    "section1 section1"
+    "section2 section3";
   grid-template-columns: 50% 50%;
   grid-template-rows: auto;
-  @media(max-width: 600px) {
-    grid-template-areas: "section1"
-                          "section2"
-                        "section3";
+}
+
+@media (max-width: 1000px) {
+  main {
+    grid-template-areas:
+      "section1"
+      "section2"
+      "section3";
     grid-template-columns: auto;
     grid-template-rows: auto;
   }
@@ -43,16 +49,18 @@ select {
 
 .section2 {
   grid-area: section2;
+  width: 50%;
 }
 
 .section3 {
   grid-area: section3;
+  width: 50%;
 }
 
 .App {
   text-align: left;
   padding: 5%;
-  font-family: 'Proxima Nova', sans-serif;
+  font-family: "Proxima Nova", sans-serif;
 }
 
 .header {
